--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
 
 
         <footer>
-            <p>NaturalBridgeSanta.com</p>
+            
             <p>|</p>
-            <p style="text-align:center">Website copyright &copy; 2019 <a href="http://github.com/RidleyofZebes">Douglas J. Honeycutt</a> <br /> Media copyright &copy; 2017-2019 Paul and Sandy Garrison</p>
-            <p>|</p>
-            <p>All rights reserved.</p>
+            <p style="text-align:center">AWorldWithoutH8 <a href="http://github.com/RidleyofZebes">Tanav Thanjavuru 2020</a> 
+          </p> 
         </footer>
     </main>
 
