--- a/products.html
+++ b/products.html
@@ -1,1 +1,77 @@
-placeholder
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Products</title>
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
+    	<header>
+            <div class="container">
+    		  <img src="images/logo.jpeg" class="logo">
+            </div>
+    	</header>
+        <div id="content" class="container">
+
+                    <section class="image2" id="contact">
+            <h1 class="">
+
+                <div id="container">
+                    <figure>
+
+                    <div class="image-container">
+                        <img src="images/shirt1.jpg" />
+                    </div>
+
+                      <figcaption> <h1>Shirt cost: $12.00</h1>
+                        <h2> 12 Shirts left in stock. (Short Sleeve Lavender USA Logo)
+                        </h2>
+
+                      </figcaption>
+
+                      </figure>
+-------------------------------------------------------------------------------------------------------------------------
+
+                    <div class="image-container">
+                        <img src="images/shirt2.jpg" />
+                    </div>
+
+                      <figcaption> <h1>Shirt cost: $19.00</h1>
+                        <h2> 1 Shirt left in stock. (Long Sleeve Gray Palm Tree Logo)
+                        </h2>
+
+                      </figcaption>
+
+
+-------------------------------------------------------------------------------------------------------------------------
+                    <div class="image-container">
+                        <img src="images/shirt3.jpg" />
+                    </div>
+
+                      <figcaption> <h1>Shirt cost: $17.00</h1>
+                        <h2> Sold Out. (Tan Short Sleeve World Logo)
+                        </h2>
+
+                      </figcaption>                    
+                </div>​
+
+
+
+
+-------------------------------------------------------------------------------------------------------------------------
+
+
+
+
+
+
+                <h1>
+                Contact me at <a href="mailto:tanavthan@gmail.com">tanavthan@gmail.com. </a> Or at (267-467-1239). 
+            </h1>
+
+                <h2> Get your own shirt now!</h2>
+
+            </h1>
+        </section>
+        </div>
+    </body>
+</html>
