--- a/products.html
+++ b/products.html
@@ -25,6 +25,16 @@
                       <figcaption> <h1>Shirt cost: $12.00</h1>
                         <h2> 12 Shirts left in stock. (Short Sleeve Lavender USA Logo)
                         </h2>
+                       
+                        <h3> 
+                        Shoulder-to-shoulder taping; double-needle stitching throughout; seamless body for a wide printing area; 1x1 ribbed collar.
+                        </h3>
+
+
+                        <h3>
+                        5.6 oz 50% cotton, 50% polyester preshrunk jersey. 
+                        Oxford is 53% polyester, 47% cotton.
+                        </h3>
 
                       </figcaption>
 
@@ -36,8 +46,20 @@
                     </div>
 
                       <figcaption> <h1>Shirt cost: $19.00</h1>
-                        <h2> 1 Shirt left in stock. (Long Sleeve Gray Palm Tree Logo)
+                        <h2> Sold Out. (Long Sleeve Gray Palm Tree Logo)
                         </h2>
+                        <h3> 
+                        Double-needle coverstitched front neck
+                        Shoulder-to-shoulder tape and seamless 1x1 ribbed collar
+                        Double-needle stitched bottom hem
+                        Ribbed cuffs with concealed seam
+                        </h3>
+
+
+                        <h3>
+                        100% cotton preshrunk jersey
+                        Ash is 98% cotton, 2% polyester; Athletic Heather is 90% cotton, 10% polyester
+                        </h3>
 
                       </figcaption>
 
@@ -51,6 +73,26 @@
                         <h2> Sold Out. (Tan Short Sleeve World Logo)
                         </h2>
 
+
+
+                        <h3> 
+                       HD fabric provides a superior printing canvas
+                       Double-needle coverstitched front neck
+                       Shoulder-to-shoulder tape and seamless 1x1 ribbed collar
+                       Double-needle stitched bottom hem. Ribbed cuffs with concealed seam
+                        </h3>
+
+
+                        <h3>
+                        100% cotton preshrunk jersey
+                        Ash is 98% cotton, 2% polyester; Athletic Heather is 90% cotton, 10% polyester
+                        </h3>
+
+
+
+
+                  
+
                       </figcaption>                    
                 </div>​
 
@@ -59,6 +101,34 @@
 
 -------------------------------------------------------------------------------------------------------------------------
 
+
+
+                    <div class="image-container">
+                        <img src="images/shirt4.png" />
+                    </div>
+
+                      <figcaption> <h1>Shirt cost: $20.00</h1>
+                        <h2> Tan Long Sleeve World Logo
+                        </h2>
+
+                        <h3> 
+                        HD fabric provides a superior printing canvas
+                        Double-needle coverstitched front neck
+                        Shoulder-to-shoulder tape and seamless 1x1 ribbed collar
+                        Double-needle stitched bottom hem
+                        Ribbed cuffs with concealed seam
+                        </h3>
+
+
+                        <h3>
+                        100% cotton preshrunk jersey
+                        Ash is 98% cotton, 2% polyester; Athletic Heather is 90% cotton, 10% polyester
+                        </h3>
+
+                      </figcaption>                    
+                </div>​
+
+-------------------------------------------------------------------------------------------------------------------------
 
 
 
