--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
     <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="google-site-verification" content="wFNLSNi-whCJN-o5GvxQ6Wi5s3kVVnZc_F1Q5_CZgMg" />
 </head>
 
 <body>
