--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="google-site-verification" content="wFNLSNi-whCJN-o5GvxQ6Wi5s3kVVnZc_F1Q5_CZgMg" />
+    <meta name="google-site-verification" content="wFNLSNi-whCJN-o5GvxQ6Wi5s3kVVnZc_F1Q5_CZgMg" />
 </head>
-
+<meta name="google-site-verification" content="wFNLSNi-whCJN-o5GvxQ6Wi5s3kVVnZc_F1Q5_CZgMg" />
 <body>
     <nav class="header" id="navbar">
         <a href="#home">Home</a>
