--- a/products.html
+++ b/products.html
@@ -107,22 +107,17 @@
                         <img src="images/shirt4.png" />
                     </div>
 
-                      <figcaption> <h1>Shirt cost: $20.00</h1>
+                      <figcaption> <h1>Shirt cost: $18.00</h1>
                         <h2> Tan Long Sleeve World Logo
                         </h2>
 
                         <h3> 
-                        HD fabric provides a superior printing canvas
-                        Double-needle coverstitched front neck
-                        Shoulder-to-shoulder tape and seamless 1x1 ribbed collar
-                        Double-needle stitched bottom hem
-                        Ribbed cuffs with concealed seam
+                        Double-needle stitching, taped neck and shoulders. Quarter-turned to eliminate center crease. Ultra tight knit surface.
                         </h3>
 
 
                         <h3>
-                        100% cotton preshrunk jersey
-                        Ash is 98% cotton, 2% polyester; Athletic Heather is 90% cotton, 10% polyester
+                        6.1 oz 100% preshrunk cotton. Ash Grey is 99% cotton, 1% polyester, Sport Grey is 90% cotton, 10% polyester, Safety Green, Safety Orange, and Dark Heather are 50% cotton, 50% polyester.
                         </h3>
 
                       </figcaption>                    
