--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
     <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <meta name="google-site-verification" content="wFNLSNi-whCJN-o5GvxQ6Wi5s3kVVnZc_F1Q5_CZgMg" />
-    <meta name="google-site-verification" content="wFNLSNi-whCJN-o5GvxQ6Wi5s3kVVnZc_F1Q5_CZgMg" />
 </head>
-<meta name="google-site-verification" content="wFNLSNi-whCJN-o5GvxQ6Wi5s3kVVnZc_F1Q5_CZgMg" />
+
 <body>
     <nav class="header" id="navbar">
         <a href="#home">Home</a>
@@ -18,9 +16,6 @@
         <a href="#socialmedia">Social Media</a>
         <a href="#contact">Contact</a>
         <a href="#products">Products</a>
-
-
-
     </nav>
    
 
@@ -68,7 +63,7 @@
 
 
 
-        <section id = "Products">
+        <section id = "products">
 
 
        
