--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
 
 
-        <section class = "products" id = "products">
+        <section class = "store" id = "store">
 
 
        
-        <a href="products.html">
+        <a href="store.html">
         <div class="vertical-center"></div>
-        <input class="favorite styled" value="Products" >
+        <input class="favorite styled" value="Look at our store" >
 
         </section>
 
