--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#news">News</a>
         <a href="#socialmedia">Social Media</a>
         <a href="#contact">Contact</a>
-        <a href="#products">Products</a>
+        <a href="#store">Store</a>
     </nav>
    
 
@@ -74,23 +74,7 @@
         </section>
 
 
-        <section class = "store" id = "store">
-
-
        
-        <a href="store.html">
-        <div class="vertical-center"></div>
-        <input class="favorite styled" value="Products" >
-
-        </section>
-
-
-
-
-
-
-
-
 
 
 
